# ai-bootcamp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  eval_results.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever2.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: graph.py  retrieval_generation.py
apps/api/src/api/agents/prompts/: retrieval_generation.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot-ui/: Dockerfile  pyproject.toml
apps/chatbot-ui/src/chatbot_ui/: app.py
notebooks/week1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-rag-evals.ipynb
notebooks/week2/: 01-structured-output-intro.ipynb  02-structured-output-rag-pipeline.ipynb  03-hybrid-search.ipynb  03-test.ipynb  04-Reranking.ipynb  05-prompt-versioning.ipynb
notebooks/week3/: 01-langgraph-intro.ipynb
