[project]
name = "prereq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.68.0",
    "groq>=1.1.2",
    "instructor>=1.14.5",
    "ipykernel>=7.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langsmith>=0.7.22",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ragas>=0.4.3",
    "streamlit>=1.55.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot-ui",
]

[dependency-groups]
dev = [
    "cohere>=5.21.1",
    "fastapi>=0.135.1",
    "fastembed>=0.8.0",
    "instructor>=1.14.5",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "matplotlib>=3.10.8",
    "openai>=2.29.0",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
]
