[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShivamBwaj", email = "shivambwaj@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.21.1",
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "groq>=1.1.1",
    "instructor>=1.14.5",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.22",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = {workspace=true}

[tool.hatch.build.targets.wheel]
packages=["src/api"]

[tool.hatch.build.targets.sdist]
include=[
    "src/",
    "tests/",
    "README.md",
]
