[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShivamBwaj", email = "shivambwaj@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = {workspace=true}

[tool.hatch.build.targets.wheel]
packages=["src/chatbot_ui"]

[tool.hatch.build.targets.sdist]
include=[
    "src/",
    "tests/",
    "README.md",
]
